# gen-alpha-slang-scraper

./: .gitignore  README.md  pyproject.toml
configs/: default.json  official-example.json
docs/: platform-notes.md
src/gen_alpha_slang_scraper/: __main__.py  analysis.py  cli.py  config.py  models.py  pipeline.py  storage.py  utils.py
src/gen_alpha_slang_scraper/collectors/: __init__.py  base.py  bluesky.py  mastodon.py  official.py  public_web.py
src/gen_alpha_slang_scraper/data/: stopwords.txt  watchlist_phrases.txt  watchlist_terms.txt
src/gen_alpha_slang_scraper/reports/: dashboard.py
